--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.5.2",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
