--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,46 +1,49 @@
-name: Deploy to Cloud Run
-
-env:
-  SERVICE_NAME: kafjisho-app
+name: KAFJisho App Deployment
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+
+env:
+  PROJECT_ID: ${{ secrets.CLOUD_RUN_PROJECT_NAME }}
+  REGION: asia-southeast1
+  # project-name but it can be anything you want
+  REPO_NAME: kafjisho-app
 
 jobs:
-  dockerize-and-deploy:
+  build-and-deploy:
+    name: Setup, Build, and Deploy
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Google Cloud Auth
-        uses: "google-github-actions/auth@v2"
+      # Authenticate with Google Cloud
+      - id: "auth"
+        uses: "google-github-actions/auth@v0"
         with:
-          credentials_json: "${{ secrets.GCP_SA_KEY }}"
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          credentials_json: "${{ secrets.CLOUD_RUN_SERVICE_ACCOUNT }}"
 
+      # Setup gcloud CLI/SDK
       - name: Set up Cloud SDK
-        uses: "google-github-actions/setup-gcloud@v2"
+        uses: google-github-actions/setup-gcloud@v0
 
-      - name: Configure Docker
-        run: |
-          gcloud auth configure-docker
+      - name: Authorize Docker push
+        run: gcloud auth configure-docker
 
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME }}:latest .
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME }}:latest
+      - name: Build and tag the docker image
+        run: |-
+          docker build . --tag gcr.io/$PROJECT_ID/$REPO_NAME:$GITHUB_SHA
 
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy $SERVICE_NAME \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.DOCKER_IMAGE_NAME }}:latest \
-            --platform managed \
-            --region asia-southeast1 \
-            --allow-unauthenticated
+      - name: Push the image to the Google Container Registry (GCR)
+        run: |-
+          docker push gcr.io/$PROJECT_ID/$REPO_NAME:$GITHUB_SHA
+
+      - name: Deploy
+        run: |-
+          gcloud run deploy $REPO_NAME \
+          --region $REGION \
+          --image gcr.io/$PROJECT_ID/$REPO_NAME:$GITHUB_SHA \
+          --platform "managed" \
+          --quiet
