:rocket: cicd test

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,9 +6,8 @@ on:
       - main
 
 env:
-  PROJECT_ID: ${{ secrets.CLOUD_RUN_PROJECT_NAME }}
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   REGION: asia-southeast1
-  # project-name but it can be anything you want
   REPO_NAME: kafjisho-app
 
 jobs:
@@ -23,7 +22,7 @@ jobs:
       - id: "auth"
         uses: "google-github-actions/auth@v2"
         with:
-          credentials_json: "${{ secrets.CLOUD_RUN_SERVICE_ACCOUNT }}"
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
 
       # Setup gcloud CLI/SDK
       - name: Set up Cloud SDK
@@ -46,4 +45,5 @@ jobs:
           --region $REGION \
           --image gcr.io/$PROJECT_ID/$REPO_NAME:$GITHUB_SHA \
           --platform "managed" \
+          --set-env-vars "NEXT_PUBLIC_API_DOMAIN=${{ secrets.NEXT_PUBLIC_API_DOMAIN }}" \
           --quiet
