--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build and tag the docker image
         run: |-
           docker build . --tag gcr.io/$PROJECT_ID/$REPO_NAME:$GITHUB_SHA \
-          --build-arg NEXT_PUBLIC_API_DOMAIN=${{ secrets.NEXT_PUBLIC_API_DOMAIN }}
+          --build-arg NEXT_PUBLIC_API_DOMAIN=${{ env.NEXT_PUBLIC_API_DOMAIN }}
 
       - name: Push the image to the Google Container Registry (GCR)
         run: |-
